Fix wrong js path for wce

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/highlight.pack.js"></script>
-		<script src="wce.min.js"></script>
+		<script src="js/wce.min.js"></script>
 		<script src="js/wce.form.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
